// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SurveyPermitForm renders correctly with default empty values 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root MuiList-dense makeStyles-permitList-1 css-1mk9mw3-MuiList-root"
  />
  <div
    class="MuiBox-root css-0"
  >
    <button
      aria-label="add permit"
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation css-ok5xf-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-startIcon MuiButton-iconSizeMedium css-19goimj-MuiButton-startIcon"
      >
        <svg
          role="presentation"
          style="width: 1.5rem; height: 1.5rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
            style="fill: currentColor;"
          />
        </svg>
      </span>
      Add New Permit
    </button>
  </div>
</DocumentFragment>
`;

exports[`SurveyPermitForm renders correctly with error on the permits field due to duplicates 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root MuiList-dense makeStyles-permitList-4 css-1mk9mw3-MuiList-root"
  >
    <li
      class="MuiListItem-container css-oyakqy-MuiListItem-container"
    >
      <div
        class="MuiListItem-root MuiListItem-dense MuiListItem-padding MuiListItem-secondaryAction css-hw573y-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-1wh0g1q-MuiTypography-root"
          >
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1h9bcoo-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      for="permit.permits.[0].permit_number"
                      id="permit.permits.[0].permit_number-label"
                    >
                      Permit Number
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-wgai2y-MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1mzb9ua-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                        data-testid="permit.permits.[0].permit_number"
                        id="permit.permits.[0].permit_number"
                        name="permit.permits.[0].permit_number"
                        required=""
                        type="text"
                        value="123"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-14lo706"
                        >
                          <span>
                            Permit Number *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1h9bcoo-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      id="permit_type"
                    >
                      Permit Type
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-wgai2y-MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-10ds2k7-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Permit Type"
                        aria-labelledby="permit_type permit.permits.[0].permit_type"
                        class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                        id="permit.permits.[0].permit_type"
                        role="button"
                        tabindex="0"
                      >
                        Scientific Fish Collection Permit
                      </div>
                      <input
                        aria-hidden="true"
                        aria-invalid="false"
                        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                        name="permit.permits.[0].permit_type"
                        required=""
                        tabindex="-1"
                        value="Scientific Fish Collection Permit"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-14lo706"
                        >
                          <span>
                            Permit Type *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained MuiFormHelperText-filled Mui-required css-11rtmns-MuiFormHelperText-root"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root MuiListItemSecondaryAction-disableGutters css-14f9zar-MuiListItemSecondaryAction-root"
      >
        <button
          aria-label="remove permit"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-hpj6o1-MuiButtonBase-root-MuiIconButton-root"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <svg
            role="presentation"
            style="width: 1.5rem; height: 1.5rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
              style="fill: currentColor;"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      class="MuiListItem-container css-oyakqy-MuiListItem-container"
    >
      <div
        class="MuiListItem-root MuiListItem-dense MuiListItem-padding MuiListItem-secondaryAction css-hw573y-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-1wh0g1q-MuiTypography-root"
          >
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1h9bcoo-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      for="permit.permits.[1].permit_number"
                      id="permit.permits.[1].permit_number-label"
                    >
                      Permit Number
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-wgai2y-MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1mzb9ua-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                        data-testid="permit.permits.[1].permit_number"
                        id="permit.permits.[1].permit_number"
                        name="permit.permits.[1].permit_number"
                        required=""
                        type="text"
                        value="123"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-14lo706"
                        >
                          <span>
                            Permit Number *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1h9bcoo-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      id="permit_type"
                    >
                      Permit Type
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-wgai2y-MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-10ds2k7-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Permit Type"
                        aria-labelledby="permit_type permit.permits.[1].permit_type"
                        class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                        id="permit.permits.[1].permit_type"
                        role="button"
                        tabindex="0"
                      >
                        Scientific Fish Collection Permit
                      </div>
                      <input
                        aria-hidden="true"
                        aria-invalid="false"
                        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                        name="permit.permits.[1].permit_type"
                        required=""
                        tabindex="-1"
                        value="Scientific Fish Collection Permit"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-14lo706"
                        >
                          <span>
                            Permit Type *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained MuiFormHelperText-filled Mui-required css-11rtmns-MuiFormHelperText-root"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root MuiListItemSecondaryAction-disableGutters css-14f9zar-MuiListItemSecondaryAction-root"
      >
        <button
          aria-label="remove permit"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-hpj6o1-MuiButtonBase-root-MuiIconButton-root"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <svg
            role="presentation"
            style="width: 1.5rem; height: 1.5rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
              style="fill: currentColor;"
            />
          </svg>
        </button>
      </div>
    </li>
  </ul>
  <div
    class="MuiBox-root css-0"
  >
    <button
      aria-label="add permit"
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation css-ok5xf-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-startIcon MuiButton-iconSizeMedium css-19goimj-MuiButton-startIcon"
      >
        <svg
          role="presentation"
          style="width: 1.5rem; height: 1.5rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
            style="fill: currentColor;"
          />
        </svg>
      </span>
      Add New Permit
    </button>
  </div>
</DocumentFragment>
`;

exports[`SurveyPermitForm renders correctly with errors on the permit_number and permit_type fields 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root MuiList-dense makeStyles-permitList-3 css-1mk9mw3-MuiList-root"
  >
    <li
      class="MuiListItem-container css-oyakqy-MuiListItem-container"
    >
      <div
        class="MuiListItem-root MuiListItem-dense MuiListItem-padding MuiListItem-secondaryAction css-hw573y-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-1wh0g1q-MuiTypography-root"
          >
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1h9bcoo-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      for="permit.permits.[0].permit_number"
                      id="permit.permits.[0].permit_number-label"
                    >
                      Permit Number
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-wgai2y-MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1mzb9ua-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                        data-testid="permit.permits.[0].permit_number"
                        id="permit.permits.[0].permit_number"
                        name="permit.permits.[0].permit_number"
                        required=""
                        type="text"
                        value="123"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-14lo706"
                        >
                          <span>
                            Permit Number *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1h9bcoo-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      id="permit_type"
                    >
                      Permit Type
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-wgai2y-MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-10ds2k7-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Permit Type"
                        aria-labelledby="permit_type permit.permits.[0].permit_type"
                        class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                        id="permit.permits.[0].permit_type"
                        role="button"
                        tabindex="0"
                      >
                        Scientific Fish Collection Permit
                      </div>
                      <input
                        aria-hidden="true"
                        aria-invalid="false"
                        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                        name="permit.permits.[0].permit_type"
                        required=""
                        tabindex="-1"
                        value="Scientific Fish Collection Permit"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-14lo706"
                        >
                          <span>
                            Permit Type *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained MuiFormHelperText-filled Mui-required css-11rtmns-MuiFormHelperText-root"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root MuiListItemSecondaryAction-disableGutters css-14f9zar-MuiListItemSecondaryAction-root"
      >
        <button
          aria-label="remove permit"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-hpj6o1-MuiButtonBase-root-MuiIconButton-root"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <svg
            role="presentation"
            style="width: 1.5rem; height: 1.5rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
              style="fill: currentColor;"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      class="MuiListItem-container css-oyakqy-MuiListItem-container"
    >
      <div
        class="MuiListItem-root MuiListItem-dense MuiListItem-padding MuiListItem-secondaryAction css-hw573y-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-1wh0g1q-MuiTypography-root"
          >
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1h9bcoo-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      for="permit.permits.[1].permit_number"
                      id="permit.permits.[1].permit_number-label"
                    >
                      Permit Number
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-wgai2y-MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1mzb9ua-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                        data-testid="permit.permits.[1].permit_number"
                        id="permit.permits.[1].permit_number"
                        name="permit.permits.[1].permit_number"
                        required=""
                        type="text"
                        value="123"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-14lo706"
                        >
                          <span>
                            Permit Number *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1h9bcoo-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      id="permit_type"
                    >
                      Permit Type
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-wgai2y-MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-10ds2k7-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Permit Type"
                        aria-labelledby="permit_type permit.permits.[1].permit_type"
                        class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                        id="permit.permits.[1].permit_type"
                        role="button"
                        tabindex="0"
                      >
                        Scientific Fish Collection Permit
                      </div>
                      <input
                        aria-hidden="true"
                        aria-invalid="false"
                        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                        name="permit.permits.[1].permit_type"
                        required=""
                        tabindex="-1"
                        value="Scientific Fish Collection Permit"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-14lo706"
                        >
                          <span>
                            Permit Type *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained MuiFormHelperText-filled Mui-required css-11rtmns-MuiFormHelperText-root"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root MuiListItemSecondaryAction-disableGutters css-14f9zar-MuiListItemSecondaryAction-root"
      >
        <button
          aria-label="remove permit"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-hpj6o1-MuiButtonBase-root-MuiIconButton-root"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <svg
            role="presentation"
            style="width: 1.5rem; height: 1.5rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
              style="fill: currentColor;"
            />
          </svg>
        </button>
      </div>
    </li>
  </ul>
  <div
    class="MuiBox-root css-0"
  >
    <button
      aria-label="add permit"
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation css-ok5xf-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-startIcon MuiButton-iconSizeMedium css-19goimj-MuiButton-startIcon"
      >
        <svg
          role="presentation"
          style="width: 1.5rem; height: 1.5rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
            style="fill: currentColor;"
          />
        </svg>
      </span>
      Add New Permit
    </button>
  </div>
</DocumentFragment>
`;

exports[`SurveyPermitForm renders correctly with existing permit values 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root MuiList-dense makeStyles-permitList-2 css-1mk9mw3-MuiList-root"
  >
    <li
      class="MuiListItem-container css-oyakqy-MuiListItem-container"
    >
      <div
        class="MuiListItem-root MuiListItem-dense MuiListItem-padding MuiListItem-secondaryAction css-hw573y-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-1wh0g1q-MuiTypography-root"
          >
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1h9bcoo-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      for="permit.permits.[0].permit_number"
                      id="permit.permits.[0].permit_number-label"
                    >
                      Permit Number
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-wgai2y-MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1mzb9ua-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                        data-testid="permit.permits.[0].permit_number"
                        id="permit.permits.[0].permit_number"
                        name="permit.permits.[0].permit_number"
                        required=""
                        type="text"
                        value="123"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-14lo706"
                        >
                          <span>
                            Permit Number *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1h9bcoo-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      id="permit_type"
                    >
                      Permit Type
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-wgai2y-MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-10ds2k7-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Permit Type"
                        aria-labelledby="permit_type permit.permits.[0].permit_type"
                        class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                        id="permit.permits.[0].permit_type"
                        role="button"
                        tabindex="0"
                      >
                        Park Use Permit
                      </div>
                      <input
                        aria-hidden="true"
                        aria-invalid="false"
                        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                        name="permit.permits.[0].permit_type"
                        required=""
                        tabindex="-1"
                        value="Park Use Permit"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-14lo706"
                        >
                          <span>
                            Permit Type *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained MuiFormHelperText-filled Mui-required css-11rtmns-MuiFormHelperText-root"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root MuiListItemSecondaryAction-disableGutters css-14f9zar-MuiListItemSecondaryAction-root"
      >
        <button
          aria-label="remove permit"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-hpj6o1-MuiButtonBase-root-MuiIconButton-root"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <svg
            role="presentation"
            style="width: 1.5rem; height: 1.5rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
              style="fill: currentColor;"
            />
          </svg>
        </button>
      </div>
    </li>
    <li
      class="MuiListItem-container css-oyakqy-MuiListItem-container"
    >
      <div
        class="MuiListItem-root MuiListItem-dense MuiListItem-padding MuiListItem-secondaryAction css-hw573y-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-1wh0g1q-MuiTypography-root"
          >
            <div
              class="MuiBox-root css-0"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1h9bcoo-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      for="permit.permits.[1].permit_number"
                      id="permit.permits.[1].permit_number-label"
                    >
                      Permit Number
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-wgai2y-MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1mzb9ua-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                        data-testid="permit.permits.[1].permit_number"
                        id="permit.permits.[1].permit_number"
                        name="permit.permits.[1].permit_number"
                        required=""
                        type="text"
                        value="3213123123"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-14lo706"
                        >
                          <span>
                            Permit Number *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1h9bcoo-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      id="permit_type"
                    >
                      Permit Type
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-wgai2y-MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-10ds2k7-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Permit Type"
                        aria-labelledby="permit_type permit.permits.[1].permit_type"
                        class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                        id="permit.permits.[1].permit_type"
                        role="button"
                        tabindex="0"
                      >
                        Scientific Fish Collection Permit
                      </div>
                      <input
                        aria-hidden="true"
                        aria-invalid="false"
                        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                        name="permit.permits.[1].permit_type"
                        required=""
                        tabindex="-1"
                        value="Scientific Fish Collection Permit"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-14lo706"
                        >
                          <span>
                            Permit Type *
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained MuiFormHelperText-filled Mui-required css-11rtmns-MuiFormHelperText-root"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root MuiListItemSecondaryAction-disableGutters css-14f9zar-MuiListItemSecondaryAction-root"
      >
        <button
          aria-label="remove permit"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-hpj6o1-MuiButtonBase-root-MuiIconButton-root"
          data-testid="delete-icon"
          tabindex="0"
          type="button"
        >
          <svg
            role="presentation"
            style="width: 1.5rem; height: 1.5rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
              style="fill: currentColor;"
            />
          </svg>
        </button>
      </div>
    </li>
  </ul>
  <div
    class="MuiBox-root css-0"
  >
    <button
      aria-label="add permit"
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation css-ok5xf-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-startIcon MuiButton-iconSizeMedium css-19goimj-MuiButton-startIcon"
      >
        <svg
          role="presentation"
          style="width: 1.5rem; height: 1.5rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
            style="fill: currentColor;"
          />
        </svg>
      </span>
      Add New Permit
    </button>
  </div>
</DocumentFragment>
`;
